[package]
name = "bright"
version = "0.1.0"
authors = ["Karel Peeters <karel.peeters.leuven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddc = "0.2.1"
ddc-winapi = "0.2.0"
clap = { git = "https://github.com/clap-rs/clap/" } # = "3.0.0"

